# HTR-2022

./: README.md  index.html  script.js  style.css  test.html
Server/: app.py  bottle.py  db.py  pyproject.toml  replit_zip_error_log.txt
Server/_db/: msg
Server/static/: Message-Board.css  Message-Board.js
Server/views/: about.html  base.html  home.html  message_detail.html  message_edit.html  message_list.html  message_success.html  stats.html
Server/wsgi/: pythonanywhere.py
subpages/: chatroom.html  resources.html  statistics.html
