[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
socketio = "^0.2.1"
rocket = "^1.2.8"
meinheld = "^1.0.2"
tornado = "^6.1"
Twisted = "^22.2.0"
Jinja2 = "^3.1.1"
Mako = "^1.2.0"
Django = "^4.0.3"
gunicorn = "^20.1.0"
flup = "^1.0.3"
eventlet = "^0.33.0"
gevent = "^21.12.0"
waitress = "^2.1.1"
cutandpaste = "^0.4.0"
simplejson = "^3.17.6"
aiohttp = "^3.8.1"
CherryPy = "^18.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"